edition = "2023";

package nsb;

message nsbm {
    message Manifest {
        enum Operation {
            PING = 0;
            INIT = 1;
            SEND = 2;
            FETCH = 3;
            POST = 4;
            RECEIVE = 5;
            FORWARD = 6;
            EXIT = 7;
        }
        Operation op = 1;
        
        enum Originator {
            DAEMON = 0;
            APP_CLIENT = 1;
            SIM_CLIENT = 2;
        }
        Originator og = 2;

        enum OpCode {
            SUCCESS = 0;
            FAILURE = 1;
            CLIENT_REQUEST = 2;
            DAEMON_RESPONSE = 3;
            IMPLICIT_TARGET = 4;
            EXPLICIT_TARGET = 5;
            MESSAGE = 6;
            NO_MESSAGE = 7;
        }
        OpCode code = 3;
    }
    Manifest manifest = 1;

    message Metadata {
        string src_id = 1;
        string dest_id = 2;
        int32 payload_size = 3;
    }
    Metadata metadata = 2;

    message ConfigParams {
        enum SystemMode {
            PULL = 0;
            PUSH = 1;
        }
        SystemMode sys_mode = 1;
        enum SimulatorMode {
            SYSTEM_WIDE = 0;
            PER_NODE = 1;
        }
        SimulatorMode sim_mode = 2;
        bool use_db = 3;
        string db_address = 4;
        int32 db_port = 5;
        int32 db_num = 6;
    }

    message IntroDetails {
        string identifier = 1;
        string address = 2;
        int32 ch_CTRL = 3;
        int32 ch_SEND = 4;
        int32 ch_RECV = 5;
    }

    oneof message {
        bytes payload = 3;
        string msg_key = 4;
        IntroDetails intro = 5;
        ConfigParams config = 6;
    }
}